--- a/client/app/views/books.html
+++ b/client/app/views/books.html
@@ -1,19 +1,24 @@
 <h1>Books</h1>
- 
-<ul ng-repeat="book in books">
-  <li>
-  	{{book.title}}
-  	{{book.author}}
-  	<button ng-click="delete(user.id)">Delete</button>
-  </li>
-</ul>
 
 
-<form ng-submit="addUser()">
-    <input type="text" ng-model="newFirstName" placeholder="First Name">
-    <input type="text" ng-model="newLastName" placeholder="Last Name">
-    <input type="text" ng-model="newEmail" placeholder="Email">
-       <input type="text" ng-model="newPassword" placeholder="Password">
-    <input type="text" ng-model="newZipCode" placeholder="ZipCode">
+<form ng-submit="addBook()">
+    <input type="text" ng-model="newBookTitle" placeholder="Title">
+    <input type="text" ng-model="newBookAuthor" placeholder="Author">
+    <input type="text" ng-model="newYear" placeholder="Year">
+    <input type="text" ng-model="newISBN" placeholder="ISBN">
     <input type="submit" value="Add">
 </form>
+
+<br> 
+<ul ng-repeat="book in books">
+
+  	<strong>Title:</strong>  {{book.title}}
+  	<br>
+  	<strong>Author:</strong> Author: {{book.author}}
+  	<br>
+  	<strong>Year:</strong> {{book.year}}
+  	<br>
+  	<strong>ISBN:</strong> {{book.ISBN}}
+
+</ul>
+
