--- a/client/app/views/users.html
+++ b/client/app/views/users.html
@@ -1,9 +1,23 @@
 <h1>Users</h1>
- 
+<h2>hi</h2>
+
+<form ng-submit="createUser()">
+  <input type="text" ng-model="user.first_name" placeholder="First Name">
+  <input type="text" ng-model="user.last_name" placeholder="Last Name">
+  <input type="text" ng-model="user.email" placeholder="Email">
+  <input type="text" ng-model="user.zipcode" placeholder="Zip Code">
+  <input type="password" ng-model="user.password" placeholder="Password">
+  <input type="submit" value="Add User">
+</form>
+
+<h4>Here's a list of our current users </h4>
+
 <ul ng-repeat="user in users">
   <li>
-  	{{user.id}}
+  	<a href="{{user.url}}">{{user.id}}</a>
   	{{user.first_name}}
-  	{{user.last_name}}
+  	{{user.last_name}}<br>
+    {{user.email}}<br>
+    <button ng-click="deleteUser(user.id)">Delete</button>
   </li>
 </ul>
