--- a/client/app/views/users.html
+++ b/client/app/views/users.html
@@ -1,7 +1,7 @@
 <h1>Users</h1>
 <h2>hi</h2>
 
-<form ng-submit="createUser()">
+<form ng-submit="createUser(user)">
   <input type="text" ng-model="user.first_name" placeholder="First Name">
   <input type="text" ng-model="user.last_name" placeholder="Last Name">
   <input type="text" ng-model="user.email" placeholder="Email">
@@ -14,6 +14,7 @@
 
 <ul ng-repeat="user in users">
   <li>
+    {{user.id}}
   	{{user.first_name}}
   	{{user.last_name}}<br>
     {{user.email}}<br>
