--- a/client/app/views/books.html
+++ b/client/app/views/books.html
@@ -2,7 +2,7 @@
 
 {{books.length}}
 
-<form ng-submit="save()">
+<form ng-submit="update(book)">
     <input type="text" ng-model="book.title" placeholder="Title">
     <input type="text" ng-model="book.author" placeholder="Author">
     <input type="text" ng-model="book.year" placeholder="Year">
