--- a/client/app/views/users.html
+++ b/client/app/views/users.html
@@ -10,14 +10,15 @@
   <input type="submit" value="Add User">
 </form>
 
-<h4>Here's a list of our current users </h4>
+<table ng-show"users.length">
+    <ul ng-repeat="user in users">
 
-<ul ng-repeat="user in users">
-  <li>
-    {{user.id}}
-  	{{user.first_name}}
-  	{{user.last_name}}<br>
-    {{user.email}}<br>
-    <button ng-click="deleteUser(user)">Delete</button>
-  </li>
-</ul>
+        <strong>Name:</strong>  {{user.first_name}}
+      {{user.last_name}}
+        <br>
+        <strong>Email:</strong> {{user.email}}
+        <br>
+        <button ng-click="delete(user)">Delete</button>
+    </ul>
+
+</table>
