--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -24,7 +24,7 @@
       </div>
       <div class="modal-body">
         <form class="form-group" ng-submit="login(user)">
-          <input class="form-control" type="text" ng-model="user.email" placeholder="Email"><br>
+          <input class="form-control" type="text" ng-model="user.email" placeholder="Email" autofocus ><br>
           
           <input class="form-control" type="password" ng-model="user.password" placeholder="Password"><br>
         </form>
